Separate WINDOW and STEP (#1009)
* Add WINDOW to request

* Add java doc

* Add sliding window aggregation

* Add test cases

* Validate window length

* Fix

* Extract validator

* Apply review comments

* Adjust scalar computing

* Use AST for window function expression

* Use AST in aggregation pipeline

* Move Macro replacement out of Expression@SqlSerializer

* Fix test cases

* Move SelectStatementBuilder to builder package

* Fix ORDER BY

* Remove extra definitions

* Fix