@@ -14,9 +14,10 @@
  *    limitations under the License.
  */
 
-package org.bithon.server.storage.jdbc.common.statement;
+package org.bithon.server.storage.jdbc.common.statement.builder;
 
 import org.bithon.component.commons.expression.ComparisonExpression;
+import org.bithon.component.commons.expression.IDataType;
 import org.bithon.component.commons.expression.IdentifierExpression;
 import org.bithon.component.commons.expression.LiteralExpression;
 import org.bithon.component.commons.expression.LogicalExpression;
@@ -43,7 +44,9 @@ import org.bithon.server.storage.datasource.query.ast.SelectStatement;
 import org.bithon.server.storage.datasource.query.ast.Selector;
 import org.bithon.server.storage.datasource.store.IDataStoreSpec;
 import org.bithon.server.storage.jdbc.clickhouse.ClickHouseSqlDialect;
+import org.bithon.server.storage.jdbc.clickhouse.schema.AggregateFunctionColumn;
 import org.bithon.server.storage.jdbc.common.dialect.ISqlDialect;
+import org.bithon.server.storage.jdbc.common.statement.SqlGenerator;
 import org.bithon.server.storage.jdbc.h2.H2SqlDialect;
 import org.bithon.server.storage.jdbc.mysql.MySQLSqlDialect;
 import org.bithon.server.storage.metrics.Interval;
@@ -59,6 +62,9 @@ import java.util.List;
 import java.util.TimeZone;
 
 /**
+ * The test cases are located in this module because it has dependencies on concrete DB implementations.
+ * And server-starter is the right module that depends on all DB implementations.
+ *
  * @author frank.chen021@outlook.com
  * @date 26/7/24 10:44 am
  */
@@ -69,20 +75,20 @@ public class SelectStatementBuilderTest {
                                                      new TimestampSpec("timestamp"),
                                                      Arrays.asList(new StringColumn("appName", "appName"),
                                                                    new StringColumn("instance", "instance")),
-                                                     Arrays.asList(new AggregateLongSumColumn("responseTime",
-                                                                                              "responseTime"),
-                                                                   new AggregateLongSumColumn("totalCount",
-                                                                                              "totalCount"),
+                                                     Arrays.asList(new AggregateLongSumColumn("responseTime", "responseTime"),
+                                                                   new AggregateLongSumColumn("totalCount", "totalCount"),
                                                                    new AggregateLongSumColumn("count4xx", "count4xx"),
                                                                    new AggregateLongSumColumn("count5xx", "count5xx"),
-                                                                   new AggregateLongLastColumn("activeThreads",
-                                                                                               "activeThreads"),
-                                                                   new AggregateLongLastColumn("totalThreads",
-                                                                                               "totalThreads"),
+                                                                   new AggregateLongLastColumn("activeThreads", "activeThreads"),
+                                                                   new AggregateLongLastColumn("totalThreads", "totalThreads"),
                                                                    new ExpressionColumn("avgResponseTime",
                                                                                         null,
                                                                                         "sum(responseTime) / sum(totalCount)",
-                                                                                        "double")
+                                                                                        "double"),
+
+                                                                   // For ClickHouse data source
+                                                                   new AggregateFunctionColumn("clickedSum", "clickedSum", "sum", IDataType.LONG),
+                                                                   new AggregateFunctionColumn("clickedCnt", "clickedCnt", "count", IDataType.LONG)
                                                      ),
                                                      null,
                                                      new IDataStoreSpec() {
@@ -131,13 +137,9 @@ public class SelectStatementBuilderTest {
     public void testSimpleAggregation_GroupBy() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(h2Dialect)
-                                                                .fields(Collections.singletonList(new Selector(new Expression(
-                                                                    schema,
-                                                                    "sum(totalCount)"), new Alias("t"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                .fields(Collections.singletonList(new Selector(new Expression(schema, "sum(totalCount)"), new Alias("t"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .groupBy(List.of("appName"))
                                                                 .schema(schema)
                                                                 .build();
@@ -174,12 +176,12 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       sum("totalCount" * 2) AS "t"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           sum("totalCount" * 2) AS "t"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName"
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -235,20 +237,20 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime" * 2) AS "_var0"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime" * 2) AS "_var0",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -273,20 +275,20 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       round(round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2), 2) AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime") AS "responseTime"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           round(round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2), 2) AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -294,18 +296,11 @@ public class SelectStatementBuilderTest {
     public void testPostAggregation_TimeSeries() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(h2Dialect)
-                                                                .fields(Collections.singletonList(new Selector(new Expression(
-                                                                    schema,
-                                                                    "sum(responseTime)/sum(totalCount)"),
-                                                                                                               new Alias(
-                                                                                                                   "avg"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800"),
+                                                                .fields(Collections.singletonList(new Selector(new Expression(schema, "sum(responseTime)/sum(totalCount)"), new Alias("avg"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
                                                                                       Duration.ofSeconds(10),
-                                                                                      new IdentifierExpression(
-                                                                                          "timestamp")))
+                                                                                      new IdentifierExpression("timestamp")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .schema(schema)
                                                                 .build();
@@ -314,22 +309,109 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                         "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime") AS "responseTime"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName", "_timestamp"
-                                )
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName", "_timestamp"
+                                    )
+                                    """.trim(),
+                                sqlGenerator.getSQL());
+    }
+
+    @Test
+    public void testPostAggregation_TimeSeries_DifferentWindowAndInterval_HasGroupBy() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(h2Dialect)
+                                                                .fields(Collections.singletonList(new Selector(new Expression(schema, "sum(responseTime)/sum(totalCount)"), new Alias("avg"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:05.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:05.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      // 5 minutes window
+                                                                                      HumanReadableDuration.parse("5m"),
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .groupBy(List.of("appName", "instanceName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        SqlGenerator sqlGenerator = new SqlGenerator(h2Dialect);
+        selectStatement.accept(sqlGenerator);
+
+        Assertions.assertEquals("""
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             sum("responseTime") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
+                                             sum("totalCount") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
+                                      FROM
+                                      (
+                                        SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                               "appName",
+                                               "instanceName",
+                                               sum("responseTime") AS "responseTime",
+                                               sum("totalCount") AS "totalCount"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
+                                        GROUP BY "appName", "instanceName", "_timestamp"
+                                      )
+                                      WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
+                                    )
+                                    """.trim(),
+                                sqlGenerator.getSQL());
+    }
+
+    @Test
+    public void testPostAggregation_TimeSeries_DifferentWindowAndInterval_NoGroupBy() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(h2Dialect)
+                                                                .fields(Collections.singletonList(new Selector(new Expression(schema, "sum(responseTime)/sum(totalCount)"), new Alias("avg"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:05.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:05.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      // 5 minutes window
+                                                                                      HumanReadableDuration.parse("5m"),
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .schema(schema)
+                                                                .build();
+
+        SqlGenerator sqlGenerator = new SqlGenerator(h2Dialect);
+        selectStatement.accept(sqlGenerator);
+
+        Assertions.assertEquals("""
+                                    SELECT "_timestamp",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "_timestamp",
+                                             sum("responseTime") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
+                                             sum("totalCount") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
+                                      FROM
+                                      (
+                                        SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                               sum("responseTime") AS "responseTime",
+                                               sum("totalCount") AS "totalCount"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
+                                        GROUP BY "_timestamp"
+                                      )
+                                      WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
+                                    )
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -340,12 +422,9 @@ public class SelectStatementBuilderTest {
                                                                 .fields(Collections.singletonList(new Selector(new Expression(
                                                                     schema,
                                                                     "round(sum(responseTime)/sum(totalCount), 2)"),
-                                                                                                               new Alias(
-                                                                                                                   "avg"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                                                               new Alias("avg"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .schema(schema)
                                                                 .build();
@@ -354,20 +433,20 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2) AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime") AS "responseTime"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2) AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -440,7 +519,7 @@ public class SelectStatementBuilderTest {
                                     (
                                       SELECT "appName",
                                              "instanceName",
-                                             FIRST_VALUE("activeThreads") OVER (partition by UNIX_TIMESTAMP("timestamp")/ 600 * 600 ORDER BY "timestamp") AS "a"
+                                             FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "a"
                                       FROM "bithon_jvm_metrics"
                                       WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
                                     )
@@ -454,13 +533,12 @@ public class SelectStatementBuilderTest {
     public void testWindowFunction_GroupBy_NoUseWindowAggregator_CK() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(clickHouseDialect)
-                                                                .fields(Collections.singletonList(new Selector(new Expression(
-                                                                    schema,
-                                                                    "first(activeThreads)"), new Alias("a"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                .fields(List.of(
+                                                                    new Selector(new Expression(schema, "first(activeThreads)"), new Alias("a")),
+                                                                    new Selector(new Expression(schema, "last(activeThreads)"), new Alias("b")))
+                                                                )
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .schema(schema)
                                                                 .build();
@@ -469,13 +547,14 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       argMin("activeThreads", "timestamp") AS "a"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                GROUP BY "appName", "instanceName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           argMin("activeThreads", "timestamp") AS "a",
+                                           argMax("activeThreads", "timestamp") AS "b"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                    GROUP BY "appName", "instanceName"
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -512,7 +591,7 @@ public class SelectStatementBuilderTest {
                                       SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
                                              "appName",
                                              "instanceName",
-                                             FIRST_VALUE("activeThreads") OVER (partition by UNIX_TIMESTAMP("timestamp")/ 600 * 600 ORDER BY "timestamp") AS "activeThreads"
+                                             FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads"
                                       FROM "bithon_jvm_metrics"
                                       WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
                                     )
@@ -522,18 +601,14 @@ public class SelectStatementBuilderTest {
     }
 
     @Test
-    public void testWindowFunction_WithAggregator() {
+    public void testWindowFunction_WithAggregator_H2() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(h2Dialect)
                                                                 .fields(Collections.singletonList(new Selector(new Expression(
                                                                     schema,
-                                                                    "first(activeThreads)/sum(totalThreads)"),
-                                                                                                               new Alias(
-                                                                                                                   "ratio"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                    "first(activeThreads)/sum(totalThreads)"), new Alias("ratio"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .orderBy(OrderBy.builder()
                                                                                 .name("timestamp")
@@ -546,44 +621,38 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalThreads" <> 0 ) THEN ( "activeThreads" / "totalThreads" ) ELSE ( 0 ) END AS "ratio"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalThreads") AS "totalThreads",
-                                         "activeThreads"
-                                  FROM
-                                  (
                                     SELECT "appName",
                                            "instanceName",
-                                           FIRST_VALUE("activeThreads") OVER (partition by UNIX_TIMESTAMP("timestamp")/ 600 * 600 ORDER BY "timestamp") AS "activeThreads",
-                                           "totalThreads"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  )
-                                  GROUP BY "appName", "instanceName", "activeThreads"
-                                )
-                                ORDER BY "timestamp" asc
-                                """.trim(),
+                                           CASE WHEN ( "totalThreads" <> 0 ) THEN ( "activeThreads" / "totalThreads" ) ELSE ( 0 ) END AS "ratio"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             "activeThreads",
+                                             sum("totalThreads") AS "totalThreads"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
+                                               "totalThreads"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      )
+                                      GROUP BY "appName", "instanceName", "activeThreads"
+                                    )
+                                    ORDER BY "timestamp" asc
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
     @Test
-    public void testWindowFunction_NoUseWindowAggregator_WithAggregator_CK() {
+    public void testWindowFunction_WithAggregator_CK() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(clickHouseDialect)
-                                                                .fields(Collections.singletonList(new Selector(new Expression(
-                                                                    schema,
-                                                                    "first(activeThreads)/sum(totalThreads)"),
-                                                                                                               new Alias(
-                                                                                                                   "ratio"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                .fields(Collections.singletonList(new Selector(new Expression(schema, "first(activeThreads)/sum(totalThreads)"), new Alias("ratio"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .orderBy(OrderBy.builder()
                                                                                 .name("timestamp")
@@ -596,21 +665,21 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "activeThreads" / "totalThreads" AS "ratio"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         argMin("activeThreads", "timestamp") AS "activeThreads",
-                                         sum("totalThreads") AS "totalThreads"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                ORDER BY "timestamp" asc
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "activeThreads" / "totalThreads" AS "ratio"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             argMin("activeThreads", "timestamp") AS "activeThreads",
+                                             sum("totalThreads") AS "totalThreads"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    ORDER BY "timestamp" asc
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -652,7 +721,7 @@ public class SelectStatementBuilderTest {
                                       (
                                         SELECT "appName",
                                                "instanceName",
-                                               FIRST_VALUE("activeThreads") OVER (partition by UNIX_TIMESTAMP("timestamp")/ 600 * 600 ORDER BY "timestamp") AS "activeThreads",
+                                               FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
                                                "totalThreads"
                                         FROM "bithon_jvm_metrics"
                                         WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
@@ -689,28 +758,28 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT `appName`,
-                                       `instanceName`,
-                                       `totalThreads` - `activeThreads` AS `daemon`
-                                FROM
-                                (
-                                  SELECT `appName`,
-                                         `instanceName`,
-                                         sum(`totalThreads`) AS `totalThreads`,
-                                         `activeThreads`
-                                  FROM
-                                  (
                                     SELECT `appName`,
                                            `instanceName`,
-                                           FIRST_VALUE(`activeThreads`) OVER (partition by UNIX_TIMESTAMP(`timestamp`) div 600 * 600 ORDER BY `timestamp`) AS `activeThreads`,
-                                           `totalThreads`
-                                    FROM `bithon_jvm_metrics`
-                                    WHERE (`timestamp` >= '2024-07-26T21:22:00.000+08:00') AND (`timestamp` < '2024-07-26T21:32:00.000+08:00')
-                                  ) AS `tbl0`
-                                  GROUP BY `appName`, `instanceName`, `activeThreads`
-                                ) AS `tbl1`
-                                ORDER BY `timestamp` asc
-                                """.trim(),
+                                           `totalThreads` - `activeThreads` AS `daemon`
+                                    FROM
+                                    (
+                                      SELECT `appName`,
+                                             `instanceName`,
+                                             sum(`totalThreads`) AS `totalThreads`,
+                                             `activeThreads`
+                                      FROM
+                                      (
+                                        SELECT `appName`,
+                                               `instanceName`,
+                                               FIRST_VALUE(`activeThreads`) OVER (PARTITION BY (UNIX_TIMESTAMP(`timestamp`) DIV 600) * 600 ORDER BY `timestamp` ASC) AS `activeThreads`,
+                                               `totalThreads`
+                                        FROM `bithon_jvm_metrics`
+                                        WHERE (`timestamp` >= '2024-07-26T21:22:00.000+08:00') AND (`timestamp` < '2024-07-26T21:32:00.000+08:00')
+                                      ) AS `tbl0`
+                                      GROUP BY `appName`, `instanceName`, `activeThreads`
+                                    ) AS `tbl1`
+                                    ORDER BY `timestamp` asc
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -718,16 +787,14 @@ public class SelectStatementBuilderTest {
     public void testAggregationWithMacroExpression() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
                                                                 .sqlDialect(h2Dialect)
-                                                                .fields(Collections.singletonList(new Selector(new Expression(
-                                                                    schema,
-                                                                    "sum(totalCount)/{interval}"), new Alias("qps"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800"),
+                                                                .fields(Arrays.asList(
+                                                                    new Selector(new Expression(schema, "sum(totalCount)/{interval}"), new Alias("qps")),
+                                                                    new Selector(new Expression(schema, "sum(totalCount)/{instanceCount}"), new Alias("qpsPerInstance"))
+                                                                ))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
                                                                                       Duration.ofSeconds(10),
-                                                                                      new IdentifierExpression(
-                                                                                          "timestamp")))
+                                                                                      new IdentifierExpression("timestamp")))
                                                                 .groupBy(List.of("appName", "instanceName"))
                                                                 .orderBy(OrderBy.builder()
                                                                                 .name("appName")
@@ -743,13 +810,15 @@ public class SelectStatementBuilderTest {
                                     SELECT "_timestamp",
                                            "appName",
                                            "instanceName",
-                                           "totalCount" / 10 AS "qps"
+                                           "totalCount" / 10 AS "qps",
+                                           CASE WHEN ( "cardinality_var0" <> 0 ) THEN ( "totalCount" / "cardinality_var0" ) ELSE ( 0 ) END AS "qpsPerInstance"
                                     FROM
                                     (
                                       SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
                                              "appName",
                                              "instanceName",
-                                             sum("totalCount") AS "totalCount"
+                                             sum("totalCount") AS "totalCount",
+                                             count(distinct "instanceName") AS "cardinality_var0"
                                       FROM "bithon_jvm_metrics"
                                       WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
                                       GROUP BY "appName", "instanceName", "_timestamp"
@@ -886,23 +955,15 @@ public class SelectStatementBuilderTest {
                                                                 .sqlDialect(h2Dialect)
                                                                 .fields(Collections.singletonList(new Selector(new Expression(
                                                                     schema,
-                                                                    "sum(responseTime*2)/sum(totalCount)"),
-                                                                                                               new Alias(
-                                                                                                                   "avg"))))
-                                                                .interval(Interval.of(TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:22:00.000+0800"),
-                                                                                      TimeSpan.fromISO8601(
-                                                                                          "2024-07-26T21:32:00.000+0800")))
+                                                                    "sum(responseTime*2)/sum(totalCount)"), new Alias("avg"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
                                                                 .filter(
                                                                     new LogicalExpression.AND(
-                                                                        new ComparisonExpression.EQ(new IdentifierExpression(
-                                                                            "appName"),
-                                                                                                    new LiteralExpression.StringLiteral(
-                                                                                                        "bithon")),
-                                                                        new ComparisonExpression.GT(new IdentifierExpression(
-                                                                            "avg"),
-                                                                                                    new LiteralExpression.DoubleLiteral(
-                                                                                                        0.2))
+                                                                        new ComparisonExpression.EQ(new IdentifierExpression("appName"),
+                                                                                                    new LiteralExpression.StringLiteral("bithon")),
+                                                                        new ComparisonExpression.GT(new IdentifierExpression("avg"),
+                                                                                                    new LiteralExpression.DoubleLiteral(0.2))
                                                                     )
                                                                 )
                                                                 .groupBy(List.of("appName", "instanceName"))
@@ -913,25 +974,25 @@ public class SelectStatementBuilderTest {
         selectStatement.accept(sqlGenerator);
 
         Assertions.assertEquals("""
-                                SELECT *
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                  FROM
-                                  (
-                                    SELECT "appName",
-                                           "instanceName",
-                                           sum("totalCount") AS "totalCount",
-                                           sum("responseTime" * 2) AS "_var0"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND ("bithon_jvm_metrics"."appName" = 'bithon')
-                                    GROUP BY "appName", "instanceName"
-                                  )
-                                )
-                                WHERE "avg" > 0.2
-                                """.trim(),
+                                    SELECT *
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               sum("responseTime" * 2) AS "_var0",
+                                               sum("totalCount") AS "totalCount"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND ("bithon_jvm_metrics"."appName" = 'bithon')
+                                        GROUP BY "appName", "instanceName"
+                                      )
+                                    )
+                                    WHERE "avg" > 0.2
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -1033,26 +1094,26 @@ public class SelectStatementBuilderTest {
         // This is because the avgResponse is defined as DOUBLE,
         // and there's a type conversion in 'ExpressionTypeValidator'
         Assertions.assertEquals("""
-                                SELECT *
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         "totalCount",
-                                         CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avgResponseTime"
-                                  FROM
-                                  (
-                                    SELECT "appName",
-                                           "instanceName",
-                                           sum("totalCount") AS "totalCount",
-                                           sum("responseTime") AS "responseTime"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                    GROUP BY "appName", "instanceName"
-                                  )
-                                )
-                                WHERE "avgResponseTime" > 5.0
-                                """.trim(),
+                                    SELECT *
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             "totalCount",
+                                             CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avgResponseTime"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               sum("totalCount") AS "totalCount",
+                                               sum("responseTime") AS "responseTime"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                        GROUP BY "appName", "instanceName"
+                                      )
+                                    )
+                                    WHERE "avgResponseTime" > 5.0
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
@@ -1082,26 +1143,90 @@ public class SelectStatementBuilderTest {
         // This is because the avgResponse is defined as DOUBLE,
         // and there's a type conversion in 'ExpressionTypeValidator'
         Assertions.assertEquals("""
-                                SELECT *
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         "totalCount",
-                                         "responseTime" / "totalCount" AS "avgResponseTime"
-                                  FROM
-                                  (
+                                    SELECT *
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             "totalCount",
+                                             "responseTime" / "totalCount" AS "avgResponseTime"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               sum("totalCount") AS "totalCount",
+                                               sum("responseTime") AS "responseTime"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                        GROUP BY "appName", "instanceName"
+                                      )
+                                    )
+                                    WHERE "avgResponseTime" > 5.0
+                                    """.trim(),
+                                sqlGenerator.getSQL());
+    }
+
+    @Test
+    public void testAggregateFunctionColumn_CK() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(clickHouseDialect)
+                                                                .fields(Arrays.asList(new Selector(new Expression(schema, "sum(clickedSum)"), new Alias("t1")),
+                                                                                      new Selector(new Expression(schema, "count(clickedCnt)"), new Alias("t2"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800")))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        SqlGenerator sqlGenerator = new SqlGenerator(h2Dialect);
+        selectStatement.accept(sqlGenerator);
+
+        Assertions.assertEquals("""
                                     SELECT "appName",
-                                           "instanceName",
-                                           sum("totalCount") AS "totalCount",
-                                           sum("responseTime") AS "responseTime"
+                                           sumMerge("clickedSum") AS "t1",
+                                           countMerge("clickedCnt") AS "t2"
                                     FROM "bithon_jvm_metrics"
                                     WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                    GROUP BY "appName", "instanceName"
-                                  )
-                                )
-                                WHERE "avgResponseTime" > 5.0
-                                """.trim(),
+                                    GROUP BY "appName"
+                                    """.trim(),
+                                sqlGenerator.getSQL());
+    }
+
+    @Test
+    public void test_SlidingWindowOverAggregateFunctionColumn_CK() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(clickHouseDialect)
+                                                                .fields(Arrays.asList(new Selector(new Expression(schema, "sum(clickedSum)"), new Alias("t1")),
+                                                                                      new Selector(new Expression(schema, "count(clickedCnt)"), new Alias("t2"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      HumanReadableDuration.parse("1m"),
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        SqlGenerator sqlGenerator = new SqlGenerator(h2Dialect);
+        selectStatement.accept(sqlGenerator);
+
+        Assertions.assertEquals("""
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           sum("t1") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t1",
+                                           count("t2") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t2"
+                                    FROM
+                                    (
+                                      SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS "_timestamp",
+                                             "appName",
+                                             sumMerge("clickedSum") AS "t1",
+                                             countMerge("clickedCnt") AS "t2"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= fromUnixTimestamp(1722000060)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                      GROUP BY "appName", "_timestamp"
+                                    )
+                                    WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000720)
+                                    """.trim(),
                                 sqlGenerator.getSQL());
     }
 
